src/scss/base/_util.scss
/**
 * WRAPPER
 * Sets a max width, adds a consistent gutter and horizontally
 * centers the contents
 */
 .wrapper {
    width: 90vw;
    width: clamp(12rem, 90vw, 90rem);
    margin-left: auto;
    margin-right: auto;
    padding-left: rem(15);
    padding-right: rem(15);
    position: relative;
}

/* continious flow flow of all elements */

.flow > * + * {
    margin-top: var(--flow-space, 1em);
}

.splitter > :last-child {

    margin-top: var(--flow-space);
}

/* Only Seen by screen readers */

.sr-only {
  border: 0;
  clip: rect(0 0 0 0);
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}


.full-bleed {
    width: 100vw;
    margin-left: calc(50% - 50vw);
}
  
.no-scroll {
   overflow: hidden;

   @include breakpoint-up('tiny') {

      overflow: scroll;
   }
}

.uppercase {
    text-transform: uppercase;
}

 /* Color */
 .fc-dark { color: hsl(var(--cl-dark) )};
 .fc-light { color: hsl(var(--cl-light) )};
 .fc-dark-grey { color: hsl(var(--cl-dark-grey) )};
 .fc-light-grey { color: hsl(var(--cl-light-grey) )};

 .fc-low-light { color: hsl(var(--cl-light) / 0.5) };

 
 .bg-dark { background-color: hsl(var(--cl-dark) )};
 .bg-light { background-color: hsl(var(--cl-light) )};
 .bg-dark-grey { background-color: hsl(var(--cl-dark-grey) )};
 .bg-light-grey { background-color: hsl(var(--cl-light-grey) )};

 /* Planet Colors */
 .bg-mercury { background-color: hsl(var(--cl-mercury) );};
 .bg-venus { background-color: hsl(var(--cl-venus) );};
 .bg-earth { background-color: hsl(var(--cl-earth) );};
 .bg-mars { background-color: hsl(var(--cl-mars) );};
 .bg-jupiter { background-color: hsl(var(--cl-jupiter) );};
 .bg-saturn { background-color: hsl(var(--cl-saturn) );};
 .bg-uranus { background-color: hsl(var(--cl-uranus) );};
 .bg-neptune { background-color: hsl(var(--cl-neptune) );};
 


 /* fonts */
 .ff-antonio { font-family: var(--ff-antonio);};
 .ff-spartan { font-family: var(--ff-spartan);};
 
/* Font - Sizes */

.fs-900 { font-size: var(--fs-900); };
.fs-850 { font-size: var(--fs-850); };
.fs-700 { font-size: var(--fs-800); };
.fs-650 { font-size: var(--fs-650); };
.fs-600 { font-size: var(--fs-600); };
.fs-500 { font-size: var(--fs-500); };
.fs-400 { font-size: var(--fs-400); };
.fs-300 { font-size: var(--fs-300); };
.fs-200 { font-size: var(--fs-200); };
.fs-100 { font-size: var(--fs-100); };


.fs-heading { font-size: var(--fs-heading); };
.fs-nav { font-size: var(--fs-nav); };
.fs-tap { font-size: var(--fs-tap); };
.fs-planet { font-size: var(--fs-planet); };
.fs-text { font-size: var(--fs-text); };
.fs-facts { font-size: var(--fs-facts); };
.fs-data { font-size: var(--fs-data); };
.fs-wiki { font-size: var(--fs-wiki); };




/* Font weight */
.fw-900 { font-weight: 900; }; 
.fw-800 { font-weight: 800; }; 
.fw-700 { font-weight: 700; }; 
.fw-600 { font-weight: 600; }; 
.fw-500 { font-weight: 500; }; 
.fw-400 { font-weight: 400; }; 
.fw-300 { font-weight: 300; }; 
.fw-200 { font-weight: 200; }; 
.fw-100 { font-weight: 100; }; 

/* Line - height */
.line-xl { line-height: var(--lh-xl); };
.line-l { line-height: var(--lh-l); };
.line-m { line-height: var(--lh-m); };

/* letter Spacing */

.letter-space-xl { letter-spacing: var(--l-space-xl); };
.letter-space-l { letter-spacing: var(--l-space-l); };
.letter-space-m { letter-spacing: var(--l-space-m); }; 

 

/* Focus State - Planets */


@include breakpoint-up('tiny') {

   .hover {
     
      position: relative;
      
   }
   
   .hover::after {
    
      transition: all 300ms;
      position: absolute;
      content: '';
      width: 0;
      height: 3px;
      inset: 55px 0 0 0;
   }
   .hover:focus {
     position: absolute;
      content: '';
      width: 100%;
      height: 3px;
      inset: 55px 0 0 0;
   }
   
   .hover:hover::after{
      width: 100%;
   }
   
   .hover.mercury::after {
      background-color: hsl(var(--cl-mercury) );
   }
   .hover.venus::after {
      background-color: hsl(var(--cl-venus) );
   }
   .hover.earth::after{
      background-color: hsl(var(--cl-earth) );
   }
   
   .hover.mars::after {
      background-color: hsl(var(--cl-mars) );
   }
   
   .hover.jupiter::after {
      background-color: hsl(var(--cl-jupiter) );
   }
   
   .hover.saturn::after {
      background-color: hsl(var(--cl-saturn) );
   }
   
   .hover.uranus::after {
      background-color: hsl(var(--cl-uranus) );
   }
   
   .hover.neptune::after {
      background-color: hsl(var(--cl-neptune) );
   }
}

